# aroviq

./: .gitignore  LICENSE  README.md  pyproject.toml
aroviq/: __init__.py  __main__.py  api.py  scan.py
aroviq/cli/: __init__.py  report.py  watch.py
aroviq/core/: __init__.py  exceptions.py  llm.py  models.py  registry.py  summarizer.py
aroviq/data/: benchmarks.py
aroviq/engine/: runner.py
aroviq/integrations/: __init__.py  decorators.py
aroviq/reporting/: logger.py
aroviq/utils/: json_parser.py
aroviq/verifiers/: grounding.py  logic.py  rules.py  safety.py  syntax.py
benchmarks/: run_comparison.py
examples/: demo_correction.py  demo_decorator.py  demo_tool_prevention.py  hook_demo.py
tests/: test_context_safety.py  test_properties.py
web/: package-lock.json  theme.config.jsx
web/components/: DecryptText.tsx  Hero.tsx  HomePage.tsx  Navbar.tsx  PipelineDemo.tsx
web/pages/: index.tsx
web/pages/docs/: configuration.mdx  engine.mdx
